--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1><b>Hello World </b></h1>
+    <h1><b>Hello World </b></h1>
+    <h1><b>Hello World </b></h1>
 </body>
 
 </html>
