--- a/index.html
+++ b/index.html
@@ -5,15 +5,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Own Bank Documentary</title>
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <!-- css-style -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <h1><b>Hello World </b></h1>
-    <h1><b>Hello World </b></h1>
-    <h1><b>Hello World </b></h1>
-    <h1><b>Hello World </b></h1>
-    <h1><b>Hello World </b></h1>
+    <!--------------------------- header------------- -->
+    <header class="mt-4">
+        <h1 class="text-center fw-bolder text-info">Financial Bank Limited </h1>
+    </header>
+
+    <body>
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-6 ">
+                    <img class="w-100" src="./img/2106.i201.038.S.m004.c13.accounting financial audit isometric.jpg"
+                        alt="">
+                </div>
+                <div class="col-6 bg-light mx-auto center">
+                    <div class="input mt-3">
+                        <h3 class="text-center">Income</h3>
+                        <div class="income-input center mt-3">
+                            <span>Income :</span>
+                            <input type="number" name="" id="income-input" min="1">
+                        </div>
+                        <h4 class="text-center mt-3">Expenses</h4>
+                        <div class="expenses-input mt-3">
+                            <div class="mt-3">
+                                <span>Food : </span>
+                                <input class=" ms-3" type="number" name="" id="food-input">
+                            </div>
+                            <div class="mt-3">
+                                <span>Rent :</span>
+                                <input type="number" name="" class="ms-4" id="rent-input">
+                            </div>
+                            <div class="mt-3">
+                                <span>Clothes :</span>
+                                <input class="hello" type="number" name="" id="clothes-input">
+                            </div>
+                        </div>
+                        <div id="calulate-btn mt-3 row align-items-center">
+                            <button id="calculate-btn" type="button"
+                                class="btn btn-primary mt-3 btn-lg  ">Calculate</button>
+                        </div>
+                        <div mt-3>
+                            <h3 class="text-center">Total Expenses : <span id="totalExpence-money">5500</span></h3>
+                        </div>
+                        <div>
+                            <h3 class="text-center">Balaence: <span id="avilable-money">4500</span></>
+                            </h3>
+                        </div>
+                        <div id="save" class="mt-3">
+                            <span>Save:</span>
+                            <input id="save-input" type="text">
+                            <span>%</span>
+                            <button type="button" id="save-btn" class="btn btn-primary btn">Save</button>
+                        </div>
+                        <div id="last-calculate" class="mt-3">
+                            <h3 class="text-center">Saving Amount : <span>2000</span></h3>
+                            <h3 class="text-center">Remaiening Balaence : <span>2500</span></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
+
+
+
+
+
+
+
+
+
+
+
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
