added some money

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                             <h3 class="text-center">Balaence: <span id="avilable-money">4500</span></>
                             </h3>
                         </div>
-                        <div id="save" class="mt-3">
+                        <div id="save-abc" class="mt-3">
                             <span>Save:</span>
                             <input id="save-input" type="text">
                             <span>%</span>
                             <button type="button" id="save-btn" class="btn btn-primary btn">Save</button>
                         </div>
                         <div id="last-calculate" class="mt-3">
-                            <h3 class="text-center">Saving Amount : <span>2000</span></h3>
-                            <h3 class="text-center">Remaiening Balaence : <span>2500</span></h3>
+                            <h3 class="text-center">Saving Amount : <span id="saving-money">2000</span></h3>
+                            <h3 class="text-center">Remaiening Balaence : <span id="remaiening-money">2500</span></h3>
                         </div>
                     </div>
                 </div>
