--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <body>
         <div class="container">
             <div class="row mt-5">
-                <div class="col-6 ">
+                <div class="col-lg-6 ">
                     <img class="w-100" src="./img/2106.i201.038.S.m004.c13.accounting financial audit isometric.jpg"
                         alt="">
                 </div>
-                <div class="col-6 bg-light mx-auto center">
+                <div class="col-lg-6 bg-light mx-auto center">
                     <div class="input mt-3">
                         <h3 class="text-center">Income</h3>
                         <div class="income-input center mt-3">
@@ -47,7 +47,7 @@
                                 <input class="hello" type="number" name="" id="clothes-input">
                             </div>
                         </div>
-                        <div id="calulate-btn mt-3 row align-items-center">
+                        <div class="calculate" id="calulate-btn mt-3 row align-items-center">
                             <button id="calculate-btn" type="button"
                                 class="btn btn-primary mt-3 btn-lg  ">Calculate</button>
                         </div>
