--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
 </head>
 
 <body>
-    <!--------------------------- header------------- -->
+    <!----------------------------------------------- header------------------------------- -->
     <header class="mt-4">
         <h1 class="text-center fw-bolder text-info">Financial Bank Limited </h1>
     </header>
+    <!---------------------------------------------- body------------------------------------------------------------ -->
 
     <body>
-        <div class="container">
-            <div class="row mt-5">
+        <div class="container mb-5">
+            <div class="row mt-5 mb-5">
                 <div class="col-lg-6 ">
+                    <!--------------------------- image----------------- -------------->
                     <img class="w-100" src="./img/2106.i201.038.S.m004.c13.accounting financial audit isometric.jpg"
                         alt="">
                 </div>
+                <!--------------------------------- form -calculte---------------- -->
                 <div class="col-lg-6 bg-light mx-auto center">
                     <div class="input mt-3">
                         <h3 class="text-center">Income</h3>
-                        <div class="income-input center mt-3">
+                        <div class="income-input center mt-3 me-5">
                             <span>Income :</span>
                             <input type="number" name="" id="income-input" min="1">
                         </div>
@@ -36,54 +39,44 @@
                         <div class="expenses-input mt-3">
                             <div class="mt-3">
                                 <span>Food : </span>
-                                <input class=" ms-3" type="number" name="" id="food-input">
+                                <input class="ms-3" type="number" name="" min="1" id="food-input">
                             </div>
                             <div class="mt-3">
                                 <span>Rent :</span>
-                                <input type="number" name="" class="ms-4" id="rent-input">
+                                <input type="number" min="1" name="" class="ms-4" id="rent-input">
                             </div>
                             <div class="mt-3">
                                 <span>Clothes :</span>
-                                <input class="hello" type="number" name="" id="clothes-input">
+                                <input class="hello" min="1" type="number" name="" id="clothes-input">
                             </div>
                         </div>
                         <div class="calculate" id="calulate-btn mt-3 row align-items-center">
                             <button id="calculate-btn" type="button"
-                                class="btn btn-primary mt-3 btn-lg  ">Calculate</button>
+                                class="btn btn-primary mt-3 px-5 btn-lg mb-4 ">Calculate</button>
                         </div>
                         <div mt-3>
-                            <h3 class="text-center">Total Expenses : <span id="totalExpence-money">5500</span></h3>
+                            <h4 class="text-center">Total Expenses : <span id="totalExpence-money">00</span></h4>
                         </div>
                         <div>
-                            <h3 class="text-center">Balaence: <span id="avilable-money">4500</span></>
-                            </h3>
+                            <h4 class="text-center">Balaence: <span id="avilable-money">00</span></>
+                                </h3>
                         </div>
                         <div id="save-abc" class="mt-3">
                             <span>Save:</span>
-                            <input id="save-input" type="text">
+                            <input id="save-input" min="1" type="number">
                             <span>%</span>
                             <button type="button" id="save-btn" class="btn btn-primary btn">Save</button>
                         </div>
                         <div id="last-calculate" class="mt-3">
-                            <h3 class="text-center">Saving Amount : <span id="saving-money">2000</span></h3>
-                            <h3 class="text-center">Remaiening Balaence : <span id="remaiening-money">2500</span></h3>
+                            <h4 class="text-center">Saving Amount : <span id="saving-money">00</span></h4>
+                            <h4 class="text-center">Remaiening Balaence : <span id="remaiening-money">00</span></h4>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </body>
-
-
-
-
-
-
-
-
-
-
-
+    <!------------------------- Javascrip file--------------------- -->
     <script src="./js/app.js"></script>
 </body>
 
